--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="/images/dhd-display-favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
    <!-- <div class="container"> -->
@@ -109,7 +110,7 @@
             </div>
         </main>
         <footer>
-            <p>Copyright 2022 Wipeout</p>
+            <p>Copyright 2023 Wipeout</p>
         </footer>
     </div>
     
